--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,9 @@ html, body {
     font-stretch: extra-expanded !important;
 
 }
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
 
 .navbar .dropdown-menu {
     background-color: black;
@@ -109,7 +112,7 @@ html, body {
 .btn-primary-landing {
   position: absolute;
   left: 50%; 
-  bottom: 250px;
+  bottom: 100px;
   transform: translateX(-50%);
   width: 400px;
   font-family: "Rock Salt", cursive;
@@ -120,7 +123,7 @@ html, body {
 }
 .container-content {
   position: relative;
-  height: 990px; 
+  height: 750px; 
   overflow: hidden;
   z-index: 1; }
 
@@ -145,15 +148,16 @@ html, body {
 }
 /* Rules for screens smaller than 768px (mobile devices) */
 @media (max-width: 767px) {
-  .img-size, .img-fluid.img-size-desktop {
+  .img-size, .img-fluid.img-size-desktop, .img-size-desktop1 {
     height: auto; /* Maintains aspect ratio */
     margin: 0 auto; /* Centers the image */
   }
   @media (min-width: 992px) { 
-    .img-size-desktop {
+    .img-size-desktop, .img-size-desktop1 {
       max-width: 100%; /* This allows the image to be as wide as its container */
     }
   }
+
   
 
   /* Ensure that both columns take the full width on mobile for stacking */
@@ -305,11 +309,16 @@ html, body {
 }
 .features-body-text {
   font-family: "Archivo", sans-serif;
+    font-stretch: extra-expanded;
+    text-align: center;
+    margin-left: 50px;
 }
 .features-heading-text {
   font-family: "Archivo", sans-serif;
     font-weight: 700;
     font-stretch: extra-expanded;
+    text-align: center;
+    margin-left: 50px;
 }
 .google-play-badge {
   width: 150px;
@@ -431,7 +440,17 @@ html, body {
     color: #edf11a;
 }
 /* popover */
-
+.popover-change-font {
+  font-family: "Archivo", sans-serif !important;
+  font-weight: 700 !important;
+  font-stretch: extra-expanded !important;
+}
+.popover-change-font-special {
+  font-size: 18.839px !important;
+  font-family: "Archivo", sans-serif !important;
+  font-weight: 700 !important;
+  font-stretch: extra-expanded !important;
+}
 .container-popover {
   display: flex;
   justify-content: center; 
@@ -455,6 +474,8 @@ html, body {
 }
 
 /*About Us carousel*/
+
+
 .carousel-item img {
   width: 100%;
   height: auto;
