--- a/css/styles.css
+++ b/css/styles.css
@@ -348,6 +348,7 @@ html, body {
     width: 100%;
     height: auto;
     object-fit: contain;
+    margin-bottom: -10px;
   }
   
 
@@ -442,6 +443,11 @@ margin-bottom: 50px;
   color: #B18DD4;
   margin-top: 80px;
   position: relative; 
+}
+@media (max-width: 767px) {
+  .vision-text {
+    font-size: smaller; /* Adjust the font size for small devices */
+  }
 }
 
 .click-buttons {
